change event on homepage + fixed color contrast accessibility issues

--- a/src/style.css
+++ b/src/style.css
@@ -160,7 +160,7 @@ nav img {
 /* button styling */
 .btn-dark {
     background-color: #FDBA45;
-    color: white;
+    color: black;
     border-radius: 20px;
     padding: 0.7rem 6rem 0.7rem 6rem;
     text-decoration: none;
@@ -224,7 +224,7 @@ nav img {
 .fav-book-desc a {
     padding: 8px 12px;
     background-color:#FDBA45;
-    color: white;
+    color: black;
     text-decoration: none;
     border-radius: 4px;
     transition: background-color 0.2s;
@@ -821,7 +821,7 @@ html {
     top: 10px;
     right: 10px;
     background: #FDBA45;
-    color: white;
+    color: black;
     border: none;
     border-radius: 50%;
     width: 30px;
